# video-chapter-trimmer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
src/video_chapter_trimmer/: __init__.py  chapter_writer.py  cli.py  models.py  parser.py  processor.py  utils.py
tests/: __init__.py  test_chapter_writer.py  test_cli.py  test_models.py  test_parser.py  test_processor.py  test_utils.py
